--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 12:39:00 AM</p>
+    <p class="lastupdate">09/18/2020 12:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.2&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.2&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.2&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.3&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">53%</td>
+        <td class="data">52%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.930 inHg (0.007)</td>
+        <td class="data">29.927 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NW (315&#176;)</td>
+        <td class="data">4 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">74.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:16 AM">
-            70.2</span><br/>
+          <span title="12:41:10 AM">
+            70.3</span><br/>
           <span title="12:11:38 AM">
             69.0</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:16 AM" class="hival">
-            70.2</span>
+          <span title="12:41:10 AM" class="hival">
+            70.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:08:54 AM">
             53.8</span><br/>
-          <span title="12:33:28 AM">
-            52.0</span>
+          <span title="12:40:28 AM">
+            51.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:04:24 PM (Thursday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="12:08:40 AM">
             58</span><br/>
-          <span title="12:33:28 AM">
-            53</span>
+          <span title="12:40:28 AM">
+            52</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           3<br/>
-          314
+          317
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             75.9</span><br/>
-          <span title="12:35:00 AM">
-            74.9</span>
+          <span title="12:40:00 AM">
+            74.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 9 hours, 52 minutes</td>
+      <td class="data">16 days, 9 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 9 hours, 52 minutes</td>
+      <td class="data">16 days, 9 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
