--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 01:24:00 AM</p>
+    <p class="lastupdate">09/18/2020 01:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.9&#176;F</td>
+        <td class="data">70.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.9&#176;F</td>
+        <td class="data">70.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.9&#176;F</td>
+        <td class="data">70.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.915 inHg (-0.008)</td>
+        <td class="data">29.912 inHg (-0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph WNW (292&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.5&#176;F</td>
+        <td class="data">75.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:08:54 AM">
             53.8</span><br/>
-          <span title="01:20:26 AM">
-            51.3</span>
+          <span title="01:25:34 AM">
+            50.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:04:24 PM (Thursday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="12:08:40 AM">
             58</span><br/>
-          <span title="12:40:28 AM">
-            52</span>
+          <span title="01:25:34 AM">
+            51</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:06:00 AM">
             29.939</span><br/>
-          <span title="01:19:00 AM">
-            29.913</span>
+          <span title="01:28:00 AM">
+            29.912</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           3<br/>
-          337
+          339
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 10 hours, 37 minutes</td>
+      <td class="data">16 days, 10 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 10 hours, 37 minutes</td>
+      <td class="data">16 days, 10 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
