--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 02:14:00 AM</p>
+    <p class="lastupdate">09/18/2020 02:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.7&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.7&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.7&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">52.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.917 inHg (-0.012)</td>
+        <td class="data">29.922 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.5&#176;F</td>
+        <td class="data">75.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="02:11:22 AM">
-            68.7</span>
+          <span title="02:14:38 AM">
+            68.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:11:22 AM" class="loval">
-            68.7</span>
+          <span title="02:14:38 AM" class="loval">
+            68.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 11 hours, 27 minutes</td>
+      <td class="data">16 days, 11 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 11 hours, 27 minutes</td>
+      <td class="data">16 days, 11 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
