--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:14:00 AM</p>
+    <p class="lastupdate">09/18/2020 03:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.1&#176;F</td>
+        <td class="data">67.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.1&#176;F</td>
+        <td class="data">67.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.1&#176;F</td>
+        <td class="data">67.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.7&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">60%</td>
+        <td class="data">61%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.914 inHg (-0.020)</td>
+        <td class="data">29.913 inHg (-0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="03:12:22 AM">
-            67.1</span>
+          <span title="03:18:42 AM">
+            66.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:12:22 AM" class="loval">
-            67.1</span>
+          <span title="03:18:42 AM" class="loval">
+            66.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:01:14 AM">
-            60</span><br/>
+          <span title="03:14:02 AM">
+            61</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 12 hours, 27 minutes</td>
+      <td class="data">16 days, 12 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 12 hours, 27 minutes</td>
+      <td class="data">16 days, 12 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
